--- a/carousel.css
+++ b/carousel.css
@@ -3,34 +3,37 @@
   position: relative;
 }
 
-.carousel > div {
-  display: none;
+.carousel > * {
   position: relative;
+  display: none;
 }
 
-.carousel .carousel-visible,
-.carousel .carousel-prev,
-.carousel .carousel-next {
+.carousel > .visible,
+.carousel > .prev,
+.carousel > .next {
   display: block;
   width: 100%;
   height: 100%;
   top: 0;
 }
 
-.carousel .carousel-prev,
-.carousel .carousel-next {
+.carousel > .prev,
+.carousel > .next {
   position: absolute;
 }
 
-.carousel .carousel-visible {
+.carousel > .visible {
   left: 0;
 }
 
-.carousel .carousel-prev {
+.carousel > .prev {
   left: -100%;
 }
 
-.carousel .carousel-next {
+.carousel > .next {
   left: 100%;
 }
 
+.carousel > .carousel-notransition {
+  transition: none !important;
+}
